# sanuli-alkumuuvit

./: Combinatorics.hs  Kotus.hs  Main.hs  README.md  Sanuli.hs  WordPatch.hs  WordUtils.hs  Wordlist.hs  sanuli-alkumuuvit.cabal  sanuli-patch.yaml
src/: Combinatorics.hs  Kotus.hs  Main.hs  Sanuli.hs  SanuliDiff.hs  SanuliExtractor.hs  Utf8Parser.hs  WordPatch.hs  WordUtils.hs
