-- For documentation, see http://haskell.org/cabal/users-guide/
cabal-version:       >=1.10
name:                sanuli-alkumuuvit
version:             0.1.2.0
synopsis:            Generate optimal opening moves for Sanuli
description:         Uses Kotus word list and generates optimal opening
                     words for Sanuli word game, https://sanuli.fi/
bug-reports:         https://github.com/zouppen/sanuli-alkumuuvit/issues 
license:             GPL-3
license-file:        LICENSE
author:              Joel Lehtonen
maintainer:          joel.lehtonen@iki.fi
copyright:           © 2022 Joel Lehtonen
category:            Game
build-type:          Simple
extra-source-files:  README.md
data-files:          sanuli-patch.yaml

executable sanuli-alkumuuvit
  main-is:             Main.hs
  other-extensions:    RecordWildCards, OverloadedStrings
  build-depends:       base >=4.13 && <5, containers >=0.6 && <1, optparse-applicative >=0.15 && <1, yaml >=0.11 && <1, hxt >=9.3 && <10, text >= 1.2 && <2
  hs-source-dirs:      src
  other-modules:       Kotus, Sanuli, WordUtils, WordPatch, Combinatorics, Paths_sanuli_alkumuuvit
  default-language:    Haskell2010

executable sanuli-diff
  main-is:             SanuliDiff.hs
  other-extensions:    RecordWildCards, OverloadedStrings
  build-depends:       base >=4.13 && <5, containers >=0.6 && <1, optparse-applicative >=0.15 && <1, yaml >=0.11 && <1, hxt >=9.3 && <10, text >= 1.2 && <2, bytestring >= 0.10 && <1, attoparsec >= 0.13 && < 1
  hs-source-dirs:      src
  other-modules:       Kotus, Sanuli, SanuliExtractor, WordPatch, Utf8Parser, Paths_sanuli_alkumuuvit
  default-language:    Haskell2010
